--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.3.0",
     "react-router": "^7.9.2",
+    "react-router-dom": "^6.30.3",
     "react-toastify": "^11.0.5",
     "react-window": "^2.2.3",
     "recharts": "^3.5.1",
